# geo-lm

./: .env.example  .gitignore  README.md  pyproject.toml
api/: __init__.py  main.py  models.py
api/routers/: __init__.py  documents.py  dsl.py  models.py  workflows.py
data/: geo_lm.db
docs/archive/: geo-lm-v2-refactoring-plan.md
geo_lm/: __init__.py  config.py  exceptions.py
geo_lm/ai/: __init__.py  models.py
geo_lm/ai/prompts/: __init__.py
geo_lm/ai/providers/: __init__.py  anthropic.py  base.py  openai.py
geo_lm/database/: __init__.py  connection.py  repository.py
geo_lm/domain/: __init__.py  base.py  document.py  model.py
geo_lm/gempy/: __init__.py  builder.py  config.py  errors.py  exporter.py  persistence.py  spatial.py  transformer.py  validator.py
geo_lm/graphs/: __init__.py  document.py  model.py
geo_lm/parsers/: __init__.py  pdf.py
geo_lm/parsers/dsl/: __init__.py  ast.py  errors.py  grammar.lark  parser.py  serializer.py  validator.py
hutton_lm/: llm_interface.py
notebooks/: debug_gempy_pipeline.ipynb
tests/: __init__.py  conftest.py  test_api.py  test_dsl_parser.py  test_dsl_validator.py  test_gempy_transformer.py
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/: DSLEditor.tsx  DocumentUpload.tsx  ModelViewer.tsx  ProcessingPanel.tsx
web/src/pages/: Dashboard.tsx  DocumentView.tsx
