[tool.poetry]
name = "hutton-lm"
version = "0.1.0"
description = ""
authors = ["William Davis <williamjsdavis@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gempy = "^2024.2.0.2"
plotly = "^6.0.1"
ipykernel = "^6.29.5"
nbformat = "^5.10.4"
gempy-viewer = "^2025.1.1"
pyvista = "^0.45.0"
numpy = "^2.2.5"
pandas = "^2.2.3"
scipy = "^1.15.2"
torch = "^2.7.0"
llama-api-client = "^0.1.0"
pymupdf = "^1.25.5"
openai = "^1.77.0"
pypdf2 = "^3.0.1"
# geo-lm v2 dependencies
lark = "^1.1.9"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.0"
anthropic = "^0.40.0"
langgraph = "^0.2.0"
aiosqlite = "^0.20.0"
python-multipart = "^0.0.12"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
